# opengl_tutorial

./: CMakeLists.txt
common/: shader.cpp  shader.h
patch/: glm.diff
tut-01/: main.cpp
tut-02/: main.cpp
tut-03/: main.cpp  vertex.glsl
tut-04/: fragment.glsl  main.cpp  vertex.glsl
